chore: update dependencies and remove empty data directories. Create entrypoint.sh, dockerfile and environment.yml file for dockerfile

--- a/env.draw.yml
+++ b/env.draw.yml
@@ -6,6 +6,6 @@
 DB_URL: sqlite:///data/draw.db.sqlite
 DB_NAME: draw
 TABLE_NAME: dicom_log
-WATCH_DIR: /home/paperspace/koustav/server/shared_space
+WATCH_DIR: /home/draw/dicom
 MODEL_DEF_ROOT: config_yaml
 
