--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,19 @@
 # --extra-index-url https://download.pytorch.org/whl/cu118
-alembic==1.13.1
-click==8.1.7
-dcmrtstruct2nii==5
+awscli
+alembic
+click
+dcmrtstruct2nii
 git+https://github.com/Dutta-SD/nnunet_draw.git@draw_main
-nibabel==5.1.0
-numpy==1.26.0
-pandas==2.1.4
-pydicom==2.4.3
-PyYAML==6.0
-retry==0.9.2
-rt-utils==1.2.7
-schema==0.7.5
-simpleitk==2.3.1
-sqlalchemy==2.0.21
+nibabel
+numpy
+pandas
+pydicom
+PyYAML
+retry
+rt-utils
+schema=
+simpleitk
+sqlalchemy
 # Download as per GPU and latest CUDA
 # torch==2.1.0
 # torchaudio==2.1.0
