--- a/env.draw.yml
+++ b/env.draw.yml
@@ -6,6 +6,6 @@
 DB_URL: sqlite:///data/draw.db.sqlite
 DB_NAME: draw
 TABLE_NAME: dicom_log
-WATCH_DIR: /home/draw/dicom
+WATCH_DIR: /home/draw/draw/dicom
 MODEL_DEF_ROOT: config_yaml
 
