fix: update alembic script location handling to use env.yml configuration

--- a/env.draw.yml
+++ b/env.draw.yml
@@ -8,4 +8,5 @@ DB_NAME: draw
 TABLE_NAME: dicom_log
 WATCH_DIR: /home/draw/draw/dicom
 MODEL_DEF_ROOT: config_yaml
+ALEMBIC_SCRIPT_LOCATION: /home/draw/draw/alembic
 
