--- a/env.draw.yml
+++ b/env.draw.yml
@@ -6,7 +6,7 @@
 DB_URL: sqlite:///data/draw.db.sqlite
 DB_NAME: draw
 TABLE_NAME: dicom_log
-WATCH_DIR: /home/draw/draw/dicom
+WATCH_DIR: /home/draw/pipeline/dicom
 MODEL_DEF_ROOT: config_yaml
-ALEMBIC_SCRIPT_LOCATION: /home/draw/draw/alembic
+ALEMBIC_SCRIPT_LOCATION: /home/draw/pipeline/alembic
 
