fix: update alembic script location to use relative path instead of hardcoded value

--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ pydicom
 PyYAML
 retry
 rt-utils
-schema=
+schema
 simpleitk
 sqlalchemy
 # Download as per GPU and latest CUDA
@@ -19,7 +19,7 @@ sqlalchemy
 # torchaudio==2.1.0
 # torchvision==0.16.0
 # watchdog==3.0.0
-torch
+torch==2.0.0
 torchaudio
 torchvision
 watchdog
