feat: add AWS Batch environment checks and SQLite permission validation in entrypoint.sh

--- a/env.draw.yml
+++ b/env.draw.yml
@@ -4,7 +4,7 @@
 
 DB_URL: sqlite:////home/draw/pipeline/data/draw.db.sqlite
 DB_NAME: draw
-TABLE_NAME: dicom_log
+TABLE_NAME: dicomlog
 WATCH_DIR: /home/draw/pipeline/dicom
 MODEL_DEF_ROOT: config_yaml
 
