--- a/environment.yml
+++ b/environment.yml
@@ -3,24 +3,28 @@ dependencies: # The list of packages to include in your environment
     - python=3.9 # You can specify versions
     - pip # Install pip in your environment
     - pip: # Include pip dependencies last
-        - awscli
-        - alembic
-        - click
-        - dcmrtstruct2nii
+        - alembic==1.13.1
+        - click==8.1.7
+        - dcmrtstruct2nii==5
         - git+https://github.com/Dutta-SD/nnunet_draw.git@draw_main
-        - nibabel
-        - numpy
-        - pandas
-        - pydicom
-        - PyYAML
-        - retry
-        - rt-utils
-        - schema
-        - simpleitk
-        - sqlalchemy
-        - boto3
+        - nibabel==5.1.0
+        - numpy==1.26.0
+        - pandas==2.1.4
+        - pydicom==2.4.3
+        - PyYAML==6.0
+        - retry==0.9.2
+        - rt-utils==1.2.7
+        - schema==0.7.5
+        - simpleitk==2.3.1
+        - sqlalchemy==2.0.21
+        # Download as per GPU and latest CUDA
+        # torch==2.1.0
+        # torchaudio==2.1.0
+        # torchvision==0.16.0
+        # watchdog==3.0.0
         - torch==2.0.0
-        - torchaudio
-        - torchvision
-        - watchdog    
+        - torchaudio==2.0.1
+        - torchvision==0.15.1
+        - watchdog==6.0.0
+  
 
