--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,4 @@
-name: myenv # This will become the name of your environment
+name: draw # This will become the name of your environment
 dependencies: # The list of packages to include in your environment
     - python=3.10 # You can specify versions
     - pip # Install pip in your environment
